# intelligraph-module

./: .bumpversion.cfg  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  IntelliGraph.docx  README.md  deployment.pri  nds_nodesmodule.pro  settings.pri
src/: CMakeLists.txt  graphdatamodel.h  gt_igglobals.h  gt_igjsonadpater.cpp  gt_igjsonadpater.h  gt_igprivate.h  gt_igvolatileptr.h  gt_intelligraph_exports.h  gt_intelligraphdatafactory.cpp  gt_intelligraphdatafactory.h  gt_intelligraphexecutor.cpp  gt_intelligraphexecutor.h  gt_intelligraphexports.h  gt_intelligraphjsonadapter.cpp  gt_intelligraphjsonadapter.h  gt_intelligraphmodeladapter.cpp  gt_intelligraphmodeladapter.h  gt_intelligraphmodule.cpp  gt_intelligraphmodule.h  gt_intelligraphnodefactory.cpp  gt_intelligraphnodefactory.h  nds_nodesmodule.cpp  nds_nodesmodule.h  nds_nodesmodule.json  src.pro
src/data/: gt_igpackage.cpp  gt_igpackage.h  gt_intelligraph.cpp  gt_intelligraph.h  gt_intelligraphcategory.cpp  gt_intelligraphcategory.h  gt_intelligraphconnection.cpp  gt_intelligraphconnection.h  gt_intelligraphconnectiongroup.cpp  gt_intelligraphconnectiongroup.h  gt_intelligraphdynamicnode.cpp  gt_intelligraphdynamicnode.h  gt_intelligraphmodelmanager.cpp  gt_intelligraphmodelmanager.h  gt_intelligraphnode.cpp  gt_intelligraphnode.h  gt_intelligraphnodegroup.cpp  gt_intelligraphnodegroup.h  nds_package.cpp  nds_package.h
src/data/node_data/: gt_igbooldata.cpp  gt_igbooldata.h  gt_igdoubledata.cpp  gt_igdoubledata.h  gt_ignodedata.cpp  gt_ignodedata.h  gt_igobjectdata.cpp  gt_igobjectdata.h  gt_igstringlistdata.cpp  gt_igstringlistdata.h
src/data/nodes/: gt_igabstractgroupprovider.h  gt_igabstractqwtnode.cpp  gt_igabstractqwtnode.h  gt_igabstractshapenode.cpp  gt_igabstractshapenode.h  gt_igcombineshapesnode.cpp  gt_igcombineshapesnode.h  gt_igconditionalnode.cpp  gt_igconditionalnode.h  gt_igdoubletoboolnode.cpp  gt_igdoubletoboolnode.h  gt_igfinddirectchildnode.cpp  gt_igfinddirectchildnode.h  gt_iggroupinputprovider.cpp  gt_iggroupinputprovider.h  gt_iggroupoutputprovider.cpp  gt_iggroupoutputprovider.h  gt_ignumberdisplaynode.cpp  gt_ignumberdisplaynode.h  gt_ignumbersourcenode.cpp  gt_ignumbersourcenode.h  gt_igobjectmementonode.cpp  gt_igobjectmementonode.h  gt_igobjectsourcenode.cpp  gt_igobjectsourcenode.h  gt_igqwtbarchartnode.cpp  gt_igqwtbarchartnode.h  gt_igshapecolornode.cpp  gt_igshapecolornode.h  gt_igshapegeneratornode.cpp  gt_igshapegeneratornode.h  gt_igshapesettingsnode.cpp  gt_igshapesettingsnode.h  gt_igshapevisualizationnode.cpp  gt_igshapevisualizationnode.h  gt_igsleepynode.cpp  gt_igsleepynode.h  gt_igstringlistinputnode.cpp  gt_igstringlistinputnode.h  gt_igwireframenode.cpp  (+1 more)
src/data/properties/: gt_igcolorporperty.cpp  gt_igcolorporperty.h  gt_igcolorproperty.cpp  gt_igcolorproperty.h  gt_igobjectlinkproperty.cpp  gt_igobjectlinkproperty.h  gt_igstringselectionproperty.cpp  gt_igstringselectionproperty.h
src/exec/: gt_intelligraphexecutor.cpp  gt_intelligraphexecutor.h  gt_intelligraphexecutorfactory.cpp  gt_intelligraphexecutorfactory.h  gt_intelligraphparallelexecutor.cpp  gt_intelligraphparallelexecutor.cpp.krZplH  gt_intelligraphparallelexecutor.h  gt_intelligraphsequentialexecutor.cpp  gt_intelligraphsequentialexecutor.h
src/gui/: gt_igicons.cpp  gt_igicons.h  gt_igportuiaction.h  gt_intelligraphscene.cpp  gt_intelligraphscene.h  gt_intelligraphview.cpp  gt_intelligraphview.h  nds_3dplot.h  nds_barchartwidget.cpp  nds_barchartwidget.h
src/gui/items/: gt_intelligrapheditor.cpp  gt_intelligrapheditor.h  nds_3dplot.cpp  nds_3dplot.h  nds_abstractqwtmodel.cpp  nds_abstractqwtmodel.h  nds_abstractshapemodel.cpp  nds_abstractshapemodel.h  nds_barchartwidget.h  nds_combineshapesmodel.cpp  nds_combineshapesmodel.h  nds_examplemodel.cpp  nds_examplemodel.h  nds_helloqmlmodel.cpp  nds_helloqmlmodel.h  nds_nodeeditor.cpp  nds_nodeeditor.h  nds_objectdata.h  nds_objectloadermodel.cpp  nds_objectloadermodel.h  nds_objectmementomodel.cpp  nds_objectmementomodel.h  nds_qmlbarchartmodel.cpp  nds_qmlbarchartmodel.h  nds_qmlpiechartmodel.cpp  nds_qmlpiechartmodel.h  nds_qwtbarchartmodel.cpp  nds_qwtbarchartmodel.h  nds_shapedata.h  nds_shapegenmodel.cpp  nds_shapegenmodel.h  nds_shapesettingsdata.h  nds_shapesettingsmodel.cpp  nds_shapesettingsmodel.h  nds_shapevisualizationmodel.cpp  nds_shapevisualizationmodel.h  nds_simplemodel.cpp  nds_wireframemodel.cpp  nds_wireframemodel.h  ndsqmllinechartmodel.cpp  (+3 more)
src/gui/models/: gt_intelligraphobjectmodel.cpp  gt_intelligraphobjectmodel.h  nds_examplemodel.cpp  nds_examplemodel.h
src/gui/property_items/: gt_igobjectlinkpropertyitem.cpp  gt_igobjectlinkpropertyitem.h  gt_igstringselectionpropertyitem.cpp  gt_igstringselectionpropertyitem.h
src/gui/ui/: gt_iggroupproviderui.cpp  gt_iggroupproviderui.h  gt_igprojectui.h  (+11 more)
src/intelli/: connection.cpp  connection.h  connectiongroup.cpp  connectiongroup.h  core.cpp  core.h  dynamicnode.cpp  dynamicnode.h  exports.h  future.cpp  future.h  globals.h  graph.cpp  graph.h  graphadaptermodel.cpp  graphadaptermodel.h  graphbuilder.cpp  graphbuilder.h  graphcategory.cpp  graphcategory.h  graphconnectionmodel.h  graphdatamodel.h  graphexecmodel.cpp  graphexecmodel.h  graphuservariables.cpp  graphuservariables.h  graphuservariablesdb.cpp  graphuservariablesdb.h  graphutilities.cpp  graphutilities.h  memory.h  module.cpp  module.h  node.cpp  node.h  nodedata.cpp  nodedata.h  nodedatafactory.cpp  nodedatafactory.h  nodedatainterface.cpp  (+12 more)
src/private/: intelligraphnode_impl.h  utils.h
src/qml/: barchart.qml  linechart.qml  piechart.qml  qml.qrc
src/resources/: icons.qrc
tests/unittests/: CMakeLists.txt  dynamicnode.cpp  graph.cpp  graphbuilder.cpp  graphexecmodel.cpp  main.cpp  nodedata.cpp  strongtypes.cpp  test_dynamicnode.cpp  test_globals.cpp  test_graph.cpp  test_graphbuilder.cpp  test_graphexecmodel.cpp  test_graphuservariables.cpp  test_gui.cpp  test_helper.h  test_memory.cpp  test_nodedata.cpp  test_portdata.cpp  test_portinfo.cpp  test_propertyinputnodes.cpp  test_strongtypes.cpp
(+446 files in other folders)
